# upmpdcli

./: Makefile.am  Makefile.in  README  configure.ac
archlinux/: PKGBUILD
debian/: changelog  control  init.d.ex  manpage.1.ex  menu.ex  upmpdcli.default.ex  watch.ex
libupnpp/: cdircontent.cxx  cdirectory.cxx  cdirectory.hxx  config.h.in  description.cxx  device.cxx  device.hxx  dircontent.lo  directory.lo  discovery.cxx  discovery.hxx  getsyshwaddr.c  getsyshwaddr.h  ixmlwrap.cxx  log.cxx  log.hxx  md5.cxx  soaphelp.cxx  soaphelp.hxx  upnpp_p.hxx  upnpplib.cxx  upnpplib.hxx  vdir.cxx  vdir.hxx  workqueue.hxx
man/: upmpdcli.1
rpm/: upmpdcli.spec
upexplo/: upexplo.cxx
upmpd/: AVTransport.xml  RenderingControl.xml  description.xml  mpdcli.cxx  mpdcli.hxx  upmpd.cxx  upmpdcli.conf  upmpdutils.cxx  upmpdutils.hxx
