AC_INIT([upmpdcli], [0.2], [jfd@lesbonscomptes.com],
             [upmpdcli], [http://www.lesbonscomptes.com/upnpp])
AC_PREREQ([2.53])
AC_CONFIG_SRCDIR([libupnpp/upnpplib.hxx])
AC_CONFIG_HEADERS([libupnpp/config.h])

AM_INIT_AUTOMAKE([1.10 no-define subdir-objects foreign])
LT_INIT

AC_PROG_CXX

AC_CHECK_FUNCS([getifaddrs])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
